Add additional UVC support for image capture on macOS

This CL adds support for additional UVC controls:
- brightness
- colorTemperature
- contrast
- exposureMode
- exposureTime
- focusDistance
- focusMode
- saturation
- sharpness
- whiteBalanceMode

Test: https://beaufortfrancois.github.io/sandbox/image-capture/playground.html
Screenshot: https://i.imgur.com/bsz7URd.png

Bug: 817805
Change-Id: I97fa6f2d38a84df287cd1a1a32a88a20b4f933df
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4255407
Reviewed-by: Markus Handell <handellm@google.com>
Commit-Queue: Fr <beaufort.francois@gmail.com>
Cr-Commit-Position: refs/heads/main@{#1108307}